--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -113,6 +113,8 @@ div#header a {
     height: auto;
     width: auto;
     vertical-align: middle;
+    outline: none;
+    border: none;
 }
 .valign-helper {
     height: 100%;
